# cigol

./: CMakeLists.txt
scripts/: run.sh
source/cigol/: CMakeLists.txt  main.cpp
source/cigol/application/: CMakeLists.txt  generate-base-image.cpp  generate-base-image.hpp  main-scene.cpp  main-scene.hpp
source/cigol/base/: CMakeLists.txt  iterable-to-optional.cpp  iterable-to-optional.hpp  non-copyable.hpp  parameter-pack-type-unicity.hpp
source/cigol/data/: CMakeLists.txt  paths.cpp  paths.hpp
source/cigol/ecs/: CMakeLists.txt  component.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  system.hpp
source/cigol/math/: CMakeLists.txt  random.hpp  random.implementation.hpp
source/cigol/rendering/: CMakeLists.txt  colors.cpp  colors.hpp  managed-opengl-resource.cpp  managed-opengl-resource.hpp  mesh.cpp  mesh.hpp  shader-binding.cpp  shader-binding.hpp  unit-square.hpp
source/cigol/rendering/shaders/: cigol-shader.cpp  cigol-shader.hpp
